fixed messsage box not showing when no messages yet

--- a/react-app/src/components/MatchMessages/MatchMessages.css
+++ b/react-app/src/components/MatchMessages/MatchMessages.css
@@ -72,3 +72,9 @@
     align-self: flex-end;
     margin-right: 10px;
 }
+
+.make-first-move {
+    align-self: center;
+    text-align: center;
+    padding: 30px;
+}
